--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,41 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
+# IDE-related files (IntelliJ, VSCode, etc.)
+.idea/
 .vscode/
 
-### Mac OS ###
-.DS_Store
+# Maven build files
+/target/
+*.iml
+
+# Maven-specific directories
+.mvn/
+*.log
+
+# OS-generated files
+.DS_Store   # macOS specific
+Thumbs.db   # Windows specific
+
+# Build output
+*.jar
+*.war
+*.ear
+*.class
+
+# Temporary files
+*.tmp
+*.swp
+*.bak
+
+# Local development environment configuration
+.env
+
+# Logs and temporary files
+*.log
+*.out
+
+# Generated files from tests
+*.tld
+test-annotations/
+
+# Script files that you don't want in the repo (optional)
+*.sh~
+
