add protobuf dependency

--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -58,9 +58,9 @@
         </dependency>
 
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.5.12</version>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>4.29.2</version>
         </dependency>
 
 
