--- a/kafka/src/main/resources/server.properties
+++ b/kafka/src/main/resources/server.properties
@@ -25,9 +25,9 @@ node.id=1
 controller.quorum.voters=1@localhost:9093
 
 ########## NETWORK CONFIGURATION #########
-listeners=PLAINTEXT://localhost:9092,CONTROLLER://localhost:9093
+listeners=PLAINTEXT://192.168.0.101:9092,CONTROLLER://192.168.0.101:9093
 controller.listener.names=CONTROLLER
-advertised.listeners=PLAINTEXT://localhost:9092
+advertised.listeners=PLAINTEXT://192.168.0.101:9092
 
 ######### LOG DIRECTORIES #########
 log.dirs=/home/vlad/kafka-data/logs
