--- a/usefull-stuff/monitoring/docker-compose.yml
+++ b/usefull-stuff/monitoring/docker-compose.yml
@@ -10,6 +10,9 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yml'
     ports:
       - "9090:9090"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
 
   grafana:
     image: grafana/grafana-oss:latest
@@ -21,6 +24,8 @@ services:
       - "3000:3000"
     volumes:
       - grafana-storage:/var/lib/grafana
+    depends_on:
+      - prometheus
 
 volumes:
   grafana-storage:
