--- a/usefull-stuff/monitoring/prometheus/prometheus.yml
+++ b/usefull-stuff/monitoring/prometheus/prometheus.yml
@@ -1,7 +1,8 @@
 global:
-  scrape_interval: 5s
+  scrape_interval: 5s  
 
 scrape_configs:
-  - job_name: 'custom-app'
+  - job_name: 'my-local-metrics'
     static_configs:
       - targets: ['host.docker.internal:1234']
+
